--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,10 @@
         tools:layout_editor_absoluteY="217dp"
         />
 
+    <ImageView
+        android:id="@+id/selectedPictureView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         />
+
 </LinearLayout>
