--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,25 +2,22 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cstlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="MainActivity">
 
     <Button
         android:id="@+id/addButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="20dp"
-        android:layout_height="5dp"
+        app:layout_constraintTop_toTopOf="@+id/cstlayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/add_action_text"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="217dp" />
+        android:text="@string/add_action_text" />
 
     <GridView
         android:id="@+id/gridview"
+        app:layout_constraintBottom_toBottomOf="@+id/cstlayout"
         android:numColumns="2"
         android:verticalSpacing="1dp"
         android:background="#e5e5e5"
