--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,25 +5,33 @@
     android:id="@+id/cstlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="MainActivity">
 
     <Button
         android:id="@+id/addButton"
-        app:layout_constraintTop_toTopOf="@+id/cstlayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_gravity="center"
-        android:text="@string/add_action_text" />
+        android:text="@string/add_action_text"
+        app:layout_constraintLeft_toLeftOf="@+id/cstlayout"
+        app:layout_constraintRight_toRightOf="@+id/cstlayout"
+        tools:layout_constraintLeft_creator="1" />
 
     <GridView
         android:id="@+id/gridview"
-        app:layout_constraintBottom_toBottomOf="@+id/cstlayout"
+        android:layout_width="match_parent"
+        android:layout_height="478dp"
+        android:background="#ffff0000"
+        android:horizontalSpacing="1dp"
         android:numColumns="2"
         android:verticalSpacing="1dp"
-        android:background="#e5e5e5"
-        android:horizontalSpacing="1dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:visibility="visible"
+        app:layout_constraintLeft_toLeftOf="@+id/cstlayout"
+        app:layout_constraintTop_toBottomOf="@+id/addButton"
+        android:layout_marginTop="40dp"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
 
 </android.support.constraint.ConstraintLayout>
