--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginTop="80dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/gridviewdata"
         android:layout_width="190dp"
-        android:background="#fff"
+        android:background="#ff00ff00"
         android:layout_height="180dp">
 
         <TextView
@@ -16,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="Apple:row"
+            android:text="Image Row"
             android:textStyle="normal|italic"
             android:textSize="25dp" />
 
