--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cstlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +11,7 @@
     <Button
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/add_action_text"
         app:layout_constraintLeft_toLeftOf="@+id/cstlayout"
@@ -21,11 +21,9 @@
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
-        android:layout_height="478dp"
+        android:layout_height="match_parent"
         android:background="#ffff0000"
-        android:horizontalSpacing="1dp"
         android:numColumns="2"
-        android:verticalSpacing="1dp"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="@+id/cstlayout"
         app:layout_constraintTop_toBottomOf="@+id/addButton"
@@ -34,6 +32,6 @@
         tools:layout_constraintTop_creator="1" />
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
 
 
