--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -3,12 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginTop="80dp"
     android:layout_width="match_parent"
+    android:background="#ff00ff00"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/gridviewdata"
         android:layout_width="190dp"
-        android:background="#ff00ff00"
         android:layout_height="180dp">
 
         <TextView
@@ -19,7 +19,7 @@
             android:layout_centerHorizontal="true"
             android:text="Image Row"
             android:textStyle="normal|italic"
-            android:textSize="25dp" />
+            android:textSize="25sp" />
 
         <ImageView
             android:id="@+id/image"
