Successfully start a new activity when the grid item is clicked and return to the main activity when the back button is pressed; change the app logo

--- a/app/src/main/res/layout/activity_grid_item.xml
+++ b/app/src/main/res/layout/activity_grid_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="com.example.pawita.real.GridItemActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.pawita.real.GridItemActivity">
 
     <TextView
         android:id="@+id/griddata"
@@ -16,7 +16,7 @@ tools:context="com.example.pawita.real.GridItemActivity">
         android:textSize="30dp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/gridimage"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
