--- a/app/src/main/res/layout/activity_grid_item.xml
+++ b/app/src/main/res/layout/activity_grid_item.xml
@@ -17,9 +17,11 @@
 
     <ImageView
         android:id="@+id/gridimage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/griddata"
-        android:layout_marginTop="27dp" />
+        android:layout_marginTop="27dp"
+        android:layout_centerInParent="true"
+        android:scaleType="matrix" />
 </RelativeLayout>
