--- a/app/src/main/res/layout/activity_grid_item.xml
+++ b/app/src/main/res/layout/activity_grid_item.xml
@@ -11,17 +11,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="105dp"
+        android:layout_marginTop="10dp"
         android:textColor="#000"
-        android:textSize="30dp" />
+        android:textSize="20dp" />
 
     <ImageView
         android:id="@+id/gridimage"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/griddata"
-        android:layout_marginTop="27dp"
-        android:layout_centerInParent="true"
+
         android:scaleType="matrix" />
 </RelativeLayout>
