--- a/app/src/main/res/layout/activity_grid_item.xml
+++ b/app/src/main/res/layout/activity_grid_item.xml
@@ -13,7 +13,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:textColor="#000"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <ImageView
         android:id="@+id/gridimage"
