--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -9,16 +10,55 @@
     android:background="#fff"
     tools:context="MainActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        style="@style/HeaderBar"
+        android:elevation="4dp">
     <Button
-        android:id="@+id/addButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="right"
+        android:id="@+id/addButton"
         android:layout_marginTop="5dp"
         android:text="@string/add_action_text"
+        android:background="@drawable/button_bg_round"
         app:layout_constraintLeft_toLeftOf="@+id/cstlayout"
         app:layout_constraintRight_toRightOf="@+id/cstlayout"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintLeft_creator="1"
+        />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="left"
+            android:id="@+id/refreshButton"
+            android:layout_marginTop="5dp"
+            android:text="@string/add_action_text"
+            android:background="@drawable/button_bg_round"
+            app:layout_constraintLeft_toLeftOf="@+id/cstlayout"
+            app:layout_constraintRight_toRightOf="@+id/cstlayout"
+            tools:layout_constraintLeft_creator="1"
+            />
+    </android.support.v7.widget.Toolbar>
+
+    <!--<item-->
+        <!--android:id="@+id/action_favorite"-->
+        <!--android:orderInCategory="300"-->
+        <!--android:title="User"-->
+        <!--app:showAsAction="ifRoom"/>-->
+
+    <!--<Button-->
+        <!--android:id="@+id/addButton"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:text="@string/add_action_text"-->
+        <!--android:background="@drawable/button_bg_round"-->
+        <!--app:layout_constraintLeft_toLeftOf="@+id/cstlayout"-->
+        <!--app:layout_constraintRight_toRightOf="@+id/cstlayout"-->
+        <!--tools:layout_constraintLeft_creator="1" />-->
 
     <GridView
         android:id="@+id/gridview"
@@ -32,8 +72,7 @@
         android:layout_marginTop="20dp"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
-
-
 </LinearLayout>
+
 
 
